add_subdirectory(01_nullptr)
add_subdirectory(02_constexpr)
add_subdirectory(03_if_switch)
add_subdirectory(04_initializer_list)
add_subdirectory(05_tuple)
add_subdirectory(06_auto)
add_subdirectory(07_decltype)
add_subdirectory(08_decltype_auto)
add_subdirectory(09_if_constexpr)
add_subdirectory(10_for)