add_subdirectory(01_nullptr)
add_subdirectory(02_constexpr)
add_subdirectory(03_if_switch)
add_subdirectory(04_initializer_list)
add_subdirectory(05_tuple)
add_subdirectory(06_auto)
add_subdirectory(07_decltype)
add_subdirectory(08_decltype_auto)
add_subdirectory(09_if_constexpr)
add_subdirectory(10_for)
add_subdirectory(7_1_thread)
add_subdirectory(7_2_mutex)
add_subdirectory(7_2_unique_lock)
add_subdirectory(7_2_future)
add_subdirectory(3_1_Lambda)
add_subdirectory(00_my_test)
add_subdirectory(03_std_function)
add_subdirectory(03_right_value)
add_subdirectory(03_std_move)
add_subdirectory(03_rvalue_ref)
add_subdirectory(03_std_move_stl)
add_subdirectory(03_std_forward)
add_subdirectory(05_std_shared_ptr)